# halo-mainnet-stellar

./: .gitignore  .mcp.json  CHANGELOG.md  HALO_IMPLEMENTATION_TRACKER.md  HALO_MVP_PRD.md  HALO_PRD.md  HALO_TECHNICAL_ARCHITECTURE.md  Halo-POC-Implementation-Plan.docx  Halo-Protocol-Technical-Architecture.docx  POC_IMPLEMENTATION_PLAN.md  PRD.md  README.md
.deployments/: testnet.json
app/: next.config.ts  package-lock.json  package.json  vitest.config.ts
app/src/: middleware.ts
app/src/__tests__/: setup.ts
app/src/__tests__/api/: circles.test.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/(app)/: layout.tsx
app/src/app/(app)/card/: page.tsx
app/src/app/(app)/circles/: page.tsx
app/src/app/(app)/credit/: page.tsx
app/src/app/(app)/dashboard/: page.tsx
app/src/app/(app)/lending/: page.tsx
app/src/app/(app)/settings/: page.tsx
app/src/app/(app)/yield/: page.tsx
app/src/app/api/circles/: route.ts
app/src/app/api/health/: route.ts
app/src/app/explorer/: page.tsx
app/src/app/explorer/components/: address-display.tsx  animated-counter.tsx  contract-table.tsx  (+1 more)
app/src/app/login/: page.tsx
app/src/app/onboarding/: layout.tsx
app/src/components/: error-boundary.tsx
app/src/components/auth/: auth-error.tsx  google-sign-in-button.tsx
app/src/components/layout/: app-providers.tsx  header.tsx  mobile-nav.tsx  sidebar.tsx  wallet-display.tsx
app/src/components/ui/: badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  loading-spinner.tsx  skeleton.tsx  status-badge.tsx
app/src/components/wallet/: sponsor-badge.tsx
app/src/data/: explorer-data.json
app/src/hooks/: useApi.ts  useSponsorStatus.ts
app/src/lib/: constants.ts  env.ts  logger.ts  utils.ts  validation.ts
app/src/lib/analytics/: track.ts
app/src/lib/api/: response.ts
app/src/lib/auth/: admin.ts  options.ts  session.ts
app/src/lib/email/: client.ts  notifications.ts  templates.ts
app/src/lib/security/: rate-limit.ts
app/src/lib/stellar/: client.ts  format.ts  network.ts  sponsor.ts
app/src/lib/supabase/: admin.ts
app/src/lib/utils/: date.ts
app/src/types/: circle.ts  database.ts  metrics.ts
app/supabase/migrations/: 001_users.sql  002_circles.sql  003_memberships.sql  004_contributions.sql  005_payouts.sql  006_credit.sql  007_analytics.sql  008_sponsor_tracking.sql
contracts/: .gitignore  Cargo.toml  Makefile
contracts/circle/: Cargo.toml
contracts/circle/src/: lib.rs
contracts/credit/: Cargo.toml
contracts/credit/src/: lib.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: lib.rs
docs/: SECURITY.md  TECHNICAL.md  USERS.md  USER_GUIDE.md
docs/screenshots/: .gitkeep
scripts/: demo-workflow-v2.ts  demo-workflow-v3.ts  demo-workflow-v4.ts  demo-workflow-v5.ts  demo-workflow-v6.ts  demo-workflow-v7.ts  demo-workflow-v8.ts  deploy.sh  setup.sh  test-contracts.ts
(+22 files in other folders)
