[package]
name = "halo-identity"
version = "0.1.0"
edition = "2021"
description = "Halo Protocol Identity Contract - Sybil-resistant wallet binding"
license = "MIT"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
